--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
 
     <!-- Toolbar -->
     <com.google.android.material.appbar.AppBarLayout
@@ -37,30 +37,45 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Main Content Views -->
-
         <Button
-            android:id="@+id/button"
+            android:id="@+id/menuButton"
             android:layout_width="180dp"
             android:layout_height="240dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
             android:text="메뉴"
-            tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="82dp" />
+            app:layout_constraintBottom_toBottomOf="@+id/recommendButton"
+            app:layout_constraintEnd_toStartOf="@+id/eventButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recommendButton" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/recommendButton"
             android:layout_width="180dp"
             android:layout_height="120dp"
+            android:layout_marginTop="82dp"
+            android:layout_marginEnd="16dp"
             android:text="추천"
-            tools:layout_editor_absoluteX="215dp"
-            tools:layout_editor_absoluteY="82dp" />
+            app:layout_constraintBottom_toTopOf="@+id/eventButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/menuButton"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/myButton"
+            android:id="@+id/eventButton"
             android:layout_width="180dp"
             android:layout_height="120dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="409dp"
             android:text="이벤트"
-            tools:layout_editor_absoluteX="215dp"
-            tools:layout_editor_absoluteY="202dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/menuButton"
+            app:layout_constraintTop_toBottomOf="@+id/recommendButton" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
